--- a/DogShelter/service.html
+++ b/DogShelter/service.html
@@ -65,22 +65,22 @@
 
                 <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
                     <div class="navbar-nav ml-auto">
-                        <a href="index.html" class="nav-item nav-link">Home</a>
-                        <a href="about.html" class="nav-item nav-link">About</a>
-                        <a href="causes.html" class="nav-item nav-link">Causes</a>
-                        <a href="event.html" class="nav-item nav-link">Events</a>
-                        <a href="blog.html" class="nav-item nav-link">Blog</a>
+                        <a href="index.html"  class="nav-item nav-link">Home</a>
+                        <a href="about.html"  class="nav-item nav-link">About</a>
+                        <a href="causes.html"  class="nav-item nav-link">Causes</a>
+                        <a href="event.html"  class="nav-item nav-link">Events</a>
+                        <a href="blog.html"  class="nav-item nav-link">Blog</a>
                         <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle active" data-toggle="dropdown">Pages</a>
                             <div class="dropdown-menu">
-                                <a href="single.html" class="dropdown-item">Detail Page</a>
-                                <a href="service.html" class="dropdown-item">What We Do</a>
-                                <a href="team.html" class="dropdown-item">Meet The Team</a>
-                                <a href="donate.html" class="dropdown-item">Donate Now</a>
-                                <a href="volunteer.html" class="dropdown-item">Become A Volunteer</a>
+                                <a href="./single.html"  class="dropdown-item">Detail Page</a>
+                                <a href="./service.html"  class="dropdown-item">What We Do</a>
+                                <a href="./team.html"  class="dropdown-item">Meet The Team</a>
+                                <a href="./donate.html"  class="dropdown-item">Donate Now</a>
+                                <a href="./volunteer.html"  class="dropdown-item">Become A Volunteer</a>
                             </div>
                         </div>
-                        <a href="contact.html" class="nav-item nav-link">Contact</a>
+                        <a href="./contact.html"  class="nav-item nav-link">Contact</a>
                     </div>
                 </div>
             </div>
@@ -195,7 +195,7 @@
                 <div class="owl-carousel causes-carousel">
                     <div class="causes-item">
                         <div class="causes-img">
-                            <img src="img/causes-1.jpg" alt="Image">
+                            <img class="picture-dog" src="img/causes-1.jpg" alt="Image">
                         </div>
                         <div class="causes-progress">
                             <div class="progress">
@@ -219,7 +219,7 @@
                     </div>
                     <div class="causes-item">
                         <div class="causes-img">
-                            <img src="img/causes-2.jpg" alt="Image">
+                            <img class="picture-dog" src="img/causes-2.jpg" alt="Image">
                         </div>
                         <div class="causes-progress">
                             <div class="progress">
@@ -243,7 +243,7 @@
                     </div>
                     <div class="causes-item">
                         <div class="causes-img">
-                            <img src="img/causes-3.jpg" alt="Image">
+                            <img class="picture-dog" src="img/causes-3.jpg" alt="Image">
                         </div>
                         <div class="causes-progress">
                             <div class="progress">
@@ -267,7 +267,7 @@
                     </div>
                     <div class="causes-item">
                         <div class="causes-img">
-                            <img src="img/causes-4.jpg" alt="Image">
+                            <img class="picture-dog" src="img/causes-4.jpg" alt="Image">
                         </div>
                         <div class="causes-progress">
                             <div class="progress">
