--- a/DogShelter/index.html
+++ b/DogShelter/index.html
@@ -47,9 +47,9 @@
                     <div class="top-bar-right">
                         <div class="social">
                             <a href=""><i class="fab fa-twitter"></i></a>
-                            <a href=""><i class="fab fa-facebook-f"></i></a>
-                            <a href=""><i class="fab fa-linkedin-in"></i></a>
-                            <a href=""><i class="fab fa-instagram"></i></a>
+                            <a href="https://www.facebook.com/gavcheg.uz/" target="_blank"><i class="fab fa-facebook-f"></i></a>
+                            <a href="https://t.me/gavcheguz" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+                            <a href="https://www.instagram.com/gavcheguz/" target="_blank"><i class="fab fa-instagram"></i></a>
                         </div>
                     </div>
                 </div>
@@ -108,8 +108,7 @@
                         <div class="carousel-btn">
                             <a class="btn btn-custom "   href="">Donate Now</a>
                             <a class="btn btn-custom btn-play " data-toggle="modal"
-                                data-src="https://www.youtube.com/embed/DWRcNpR6Kdc" data-target="#videoModal">Watch
-                                Video</a> 
+                            data-src="https://youtu.be/0eFBb2GzJao" data-target="#videoModal">Watch Video</a>
                         </div>
                     </div>
                 </div>
@@ -126,8 +125,7 @@
                         <div class="carousel-btn">
                             <a class="btn btn-custom" href="">Donate Now</a>
                             <a class="btn btn-custom btn-play" data-toggle="modal"
-                                data-src="https://www.youtube.com/embed/DWRcNpR6Kdc" data-target="#videoModal">Watch
-                                Video</a>
+                            data-src="https://youtu.be/0eFBb2GzJao" data-target="#videoModal">Watch Video</a>
                         </div>
                     </div>
                 </div>
@@ -143,9 +141,9 @@
                         </p>
                         <div class="carousel-btn">
                             <a class="btn btn-custom" href="">Donate Now</a>
+
                             <a class="btn btn-custom btn-play" data-toggle="modal"
-                                data-src="https://www.youtube.com/embed/DWRcNpR6Kdc" data-target="#videoModal">Watch
-                                Video</a>
+                                data-src="https://youtu.be/0eFBb2GzJao" data-target="#videoModal">Watch Video</a>
                         </div>
                     </div>
                 </div>
@@ -592,11 +590,11 @@
                 <div class="col-lg-3 col-md-6">
                     <div class="team-item">
                         <div class="team-img">
-                            <img class="picture-dog2" src="img/team-1.jpg" alt="Team Image">
+                            <img class="picture-dog2" src="img/Sergi_rusnak_owner.jpg" alt="Owner image">
                         </div>
                         <div class="team-text">
-                            <h2>Yasha Habib</h2>
-                            <p>Founder & CEO</p>
+                            <h2>Руснак Сергей Павлович</h2>
+                            <p>хозяин приюта Гавчег</p>
                             <div class="team-social">
                                 <a href=""><i class="fab fa-twitter"></i></a>
                                 <a href=""><i class="fab fa-facebook-f"></i></a>
