--- a/DogShelter/index.html
+++ b/DogShelter/index.html
@@ -39,7 +39,7 @@
                         </div>
                         <div class="text">
                             <i class="fa fa-envelope"></i>
-                            <p>DenizDeniz@AHMERHABIB.COM</p>
+                            <p>GAVCHEG.UZ@Gmail.com</p>
                         </div>
                     </div>
                 </div>
@@ -100,15 +100,15 @@
                         <img src="img/carousel-1.jpg" alt="Image">
                     </div>
                     <div class="carousel-text">
-                        <h1>Let's be kind for ANIMALS</h1>
+                        <h1>Принося надежду бездомным собакам</h1>
                         <p>
-                            Lorem ipsum dolor sit amet elit. Phasellus ut mollis mauris. Vivamus egestas eleifend dui ac
-                            consequat at lectus in malesuada
+                            Присоединяйтесь к нашей миссии по обеспечению любящих домов для нуждающихся собак.
                         </p>
                         <div class="carousel-btn">
                             <a class="btn btn-custom "   href="">Donate Now</a>
+
                             <a class="btn btn-custom btn-play " data-toggle="modal"
-                            data-src="https://youtu.be/0eFBb2GzJao" data-target="#videoModal">Watch Video</a>
+                            data-src="https://www.youtube.com/embed/0eFBb2GzJao" data-target="#videoModal">Watch Video</a>
                         </div>
                     </div>
                 </div>
@@ -117,15 +117,15 @@
                         <img src="img/carousel-2.jpg" alt="Image">
                     </div>
                     <div class="carousel-text">
-                        <h1>Get Involved with helping hand</h1>
+                        <h1>Помогаем собакам найти новые дома</h1>
                         <p>
-                            Morbi sagittis turpis id suscipit feugiat. Suspendisse eu augue urna. Morbi sagittis, orci
-                            sodales varius fermentum, tortor
+                            Наша команда неустанно работает над тем, чтобы подобрать вам идеального компаньона.
                         </p>
                         <div class="carousel-btn">
-                            <a class="btn btn-custom" href="">Donate Now</a>
-                            <a class="btn btn-custom btn-play" data-toggle="modal"
-                            data-src="https://youtu.be/0eFBb2GzJao" data-target="#videoModal">Watch Video</a>
+                            <a class="btn btn-custom "   href="">Donate Now</a>
+
+                            <a class="btn btn-custom btn-play " data-toggle="modal"
+                            data-src="https://www.youtube.com/embed/0eFBb2GzJao" data-target="#videoModal">Watch Video</a>
                         </div>
                     </div>
                 </div>
@@ -134,16 +134,15 @@
                         <img src="img/carousel-3.jpg" alt="Image">
                     </div>
                     <div class="carousel-text">
-                        <h1>Bringing smiles to millions</h1>
+                        <h1>Даря улыбки миллионам</h1>
                         <p>
-                            Sed ultrices, est eget feugiat accumsan, dui nibh egestas tortor, ut rhoncus nibh ligula
-                            euismod quam. Proin pellentesque odio
+                            Наши пушистые друзья приносят радость в нашу жизнь, и вместе мы можем изменить ее к лучшему.
                         </p>
                         <div class="carousel-btn">
-                            <a class="btn btn-custom" href="">Donate Now</a>
+                            <a class="btn btn-custom "   href="">Donate Now</a>
 
-                            <a class="btn btn-custom btn-play" data-toggle="modal"
-                                data-src="https://youtu.be/0eFBb2GzJao" data-target="#videoModal">Watch Video</a>
+                            <a class="btn btn-custom btn-play " data-toggle="modal"
+                            data-src="https://www.youtube.com/embed/0eFBb2GzJao" data-target="#videoModal">Watch Video</a>
                         </div>
                     </div>
                 </div>
@@ -182,7 +181,7 @@
                 </div>
                 <div class="col-lg-6">
                     <div class="section-header">
-                        <p>Learn About Us</p>
+                        <p>Узнайте о нас</p>
                         <h2>Worldwide non-profit charity organization</h2>
                     </div>
                     <div class="about-tab">
